--- a/1-sample/package.json
+++ b/1-sample/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Alexis Jimenez <contacto.tekilapp@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "parcel": "^1.12.2"
+  }
 }
