--- a/1-sample/package.json
+++ b/1-sample/package.json
@@ -6,5 +6,8 @@
   "license": "MIT",
   "devDependencies": {
     "parcel": "^1.12.2"
+  },
+  "scripts": {
+    "parcel": "parcel index.html"
   }
 }
